--- a/public/components/addClient/addClient.html
+++ b/public/components/addClient/addClient.html
@@ -15,5 +15,5 @@
     </div>
 
 
-    <button type="button" id="addClientButton" ng-click="addClient()" class="btn btn-success">הוסף</button>
+    <button ng-disabled="isLoading" type="button" id="addClientButton" ng-click="addClient()" class="btn btn-success">הוסף</button>
 </div>
