starting of autoComplete

--- a/public/components/addClient/addClient.html
+++ b/public/components/addClient/addClient.html
@@ -1,4 +1,4 @@
-<div class="addClientContainer">
+<div class="addClientContainer addContainer">
     <div class="form-group">
         <label for="firstName">שם:</label>
         <input ng-model="newClient.firstName" type="text" class="form-control" id="firstName">
@@ -15,5 +15,5 @@
     </div>
 
 
-    <button ng-disabled="isLoading" type="button" id="addClientButton" ng-click="addClient()" class="btn btn-success">הוסף</button>
+    <button ng-disabled="isLoading" type="button" id="addClientButton" ng-click="addClient()" class="btn btn-success addButton">הוסף</button>
 </div>
