--- a/public/components/addOrder/addOrder.html
+++ b/public/components/addOrder/addOrder.html
@@ -9,7 +9,7 @@
                class="form-control"
                placeholder='הקלד לקוח'>
 
-        <ul id='searchResult'>
+        <ul ng-show="searchResult.length > 0" id='searchResult'>
             <li ng-click='setValue($index,$event)'
                 ng-repeat="result in searchResult" >
                 {{ result.firstName }} {{ result.lastName }}
@@ -20,14 +20,19 @@
 
     <div class="form-group">
         <label>בחר מוצר:</label>
-        <select ng-model="newOrder.firstName" class="form-control" id="sel1">
+        <select ng-model="newOrder.productName" class="form-control" id="sel1">
             <option ng-repeat="product in products">{{product}}</option>
         </select>
     </div>
 
     <div class="form-group">
         <label>מחיר למוצר:</label>
-        <input ng-model="newOrder.pricePerProduct" type="text" class="form-control">
+        <input ng-model="newOrder.pricePerProduct" type="number" class="form-control">
+    </div>
+
+    <div class="form-group">
+        <label>כמות:</label>
+        <input ng-model="newOrder.quantity" type="number" class="form-control">
     </div>
 
 
@@ -35,3 +40,12 @@
 
     <button ng-disabled="isLoading" type="button" id="addClientButton" ng-click="addOrder()" class="btn btn-success addButton">בצע הזמנה</button>
 </div>
+
+<!--addOrderDialog-->
+<script type="text/ng-template" id="templateId">
+    <div class="orderDialogContainer">
+        <h1>{{orderHeader}}</h1>
+        <p>{{orderMessage}}</p>
+        <img ng-if="orderStatus == '200'" src="../../images/orderSuccess.gif"/>
+    </div>
+</script>
