--- a/public/components/addOrder/addOrder.html
+++ b/public/components/addOrder/addOrder.html
@@ -42,7 +42,7 @@
 </div>
 
 <!--addOrderDialog-->
-<script type="text/ng-template" id="templateId">
+<script type="text/ng-template" id="addOrderTemplateId">
     <div class="orderDialogContainer">
         <h1>{{orderHeader}}</h1>
         <p>{{orderMessage}}</p>
