--- a/public/components/addOrder/addOrder.html
+++ b/public/components/addOrder/addOrder.html
@@ -35,6 +35,11 @@
         <input ng-model="newOrder.quantity" type="number" class="form-control">
     </div>
 
+    <div class="form-group">
+        <label>תאריך:</label>
+        <input ng-model="newOrder.date" value={{newOrder.date}} type="date" id="orderDate" class="form-control">
+    </div>
+
 
 
 
