--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -1,5 +1,5 @@
 <div class="menuContainer">
     <button type="button" ui-sref="addClient" class="btn btn-primary">הוסף לקוח</button>
     <button type="button" ui-sref="addOrder" class="btn btn-primary">הוספת הזמנה</button>
-    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" ui-sref="orders" class="btn btn-primary">הזמנות</button>
 </div>
