add client picture success

--- a/public/components/addClient/addClient.html
+++ b/public/components/addClient/addClient.html
@@ -22,9 +22,9 @@
 
 <!--addOrderDialog-->
 <script type="text/ng-template" id="addClientTemplateId">
-    <div class="orderDialogContainer">
+    <div class="addClientDialogContainer">
         <h1>{{orderHeader}}</h1>
         <p>{{orderMessage}}</p>
-        <img ng-if="orderStatus == '200'" src="../../images/orderSuccess.gif"/>
+        <img ng-if="orderStatus == '200'" src="../../images/new_client.jpg"/>
     </div>
 </script>
