--- a/public/components/orders/orders.html
+++ b/public/components/orders/orders.html
@@ -27,7 +27,7 @@
             <thead>
             <tr>
                 <th>לקוח</th>
-                <th>מוצר</th>
+                <th>מוצר/מחיר</th>
                 <th>כמות</th>
                 <th>תאריך</th>
             </tr>
@@ -35,7 +35,7 @@
             <tbody>
             <tr ng-repeat="item in orders | orderBy: '-date'">
                 <td>{{item.firstName}} {{item.lastName}}</td>
-                <td>{{item.productName}}</td>
+                <td>{{item.productName}} / {{item.pricePerProduct}}</td>
                 <td>{{item.quantity}}</td>
                 <td class="timeCell">{{item.date | date:"MM/dd/yyyy 'at' h:mma"}}</td>
             </tr>
