--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,6 @@ header {
     height: 150px;
     margin: 0 auto;
     display: block;
-    margin-bottom: 25px;
 }
 header img {
     cursor: pointer;
@@ -79,6 +78,12 @@ input, select, ul, .ngdialog-content {
 
 .orderDialogContainer img {
     width: 200px;
+    height: 150px;
+    display: block;
+    margin: 0 auto;
+}
+
+.addClientDialogContainer img {
     height: 150px;
     display: block;
     margin: 0 auto;
