auth progress at fe

--- a/public/components/signIn/signIn.html
+++ b/public/components/signIn/signIn.html
@@ -1,5 +1,5 @@
 <div class="addClientContainer addContainer signInContainer">
-    <h2>כניסה לקיוסק</h2>
+    <h2>כניסה למערכת</h2>
     <div class="form-group">
         <label>מייל:</label>
         <input ng-model="email" type="email" class="form-control">
