--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,16 @@ header img {
     display: block;
     margin: 0 auto;
 }
+.userPanel {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    direction: rtl;
+    color: cornflowerblue;
+}
+.userPanel .logout {
+    cursor: pointer;
+}
 
 input, select, ul, .ngdialog-content {
     direction: rtl;
