--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,6 +132,10 @@ input, select, ul, .ngdialog-content {
     direction: ltr;
 }
 
+.clientMonthlySum {
+    margin: 16px 0;
+}
+
 
 /* SIGNIN PAGE */
 
