--- a/public/components/orders/orders.html
+++ b/public/components/orders/orders.html
@@ -13,11 +13,13 @@
         <div class="form-group">
             <label>בחר חודש:</label>
             <select ng-model="formObject.date" class="form-control"
-                ng-options="month.date as month.name for month in months">
+                ng-options="month.date as month.name for month in months"
+                ng-click="setCurrentMonthName(month.name)">
             </select>
     </div>
 
         <button type="button" ng-click="showResults()" class="btn btn-success showOrdersButton">הצג</button>
+        <button type="button" ng-click="handleClickOpenMailDialog()" class="btn btn-success showOrdersButton" style="margin-top: 16px;">שלח במייל</button>
     </div>
 
 
