cant send all cstmrs in mail handling

--- a/public/components/orders/mailOrder/mailOrderResponse.html
+++ b/public/components/orders/mailOrder/mailOrderResponse.html
@@ -1,5 +1,5 @@
 <div class="orderDialogContainer">
     <h1>{{mailResponseHeader}}</h1>
-    <p>{{orderMessage}}</p>
+    <p>{{mailResponseMessage}}</p>
     <img ng-if="mailStatus == '200'" src="../../images/orderSuccess.gif"/>
 </div>
