--- a/public/components/orders/orders.html
+++ b/public/components/orders/orders.html
@@ -51,3 +51,12 @@
         </table>
     </div>
 </div>
+
+
+
+<!--Cannot send all customers in mail dialog template-->
+<script type="text/ng-template" id="cantMailAllClientsTemplateId">
+    <div>
+        <h1>לא ניתן לשלוח במייל את כל הלקוחות</h1>
+    </div>
+</script>
