fix ownerMailAddress expression

--- a/public/components/orders/mailOrder/mailDialog.html
+++ b/public/components/orders/mailOrder/mailDialog.html
@@ -9,7 +9,7 @@
 
     <div class="form-group">
       <input ng-model="ownerMail" type="checkbox" name="ownerMail" ng-init="ownerMail=false"/>
-      <label for="ownerMail">עוז נוי - {{$root.defaultMailAddress}}</label>
+      <label for="ownerMail">עוז נוי - {{$root.ownerMailAddress}}</label>
     </div>
     <button
       type="submit"
